--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,8 +4,7 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Senior Engineer working at Covestor, having previously spent over 6 years as a technical consultant at Accenture, giving me a good blend of enterprise and start-up experience. <br/><br/>
-			I enjoy creating great products with great user experiences and working in a dynamic environment with a focus on good development practices, automation and shipping small, frequent releases.
+			I am a Project Manager working at Skytree Digital Limited. I would love to work in an innovative and challenging environment. During my study, I have been very hardworking to get an outstanding performance. I am an eager learner and willing to face any problems and difficulties without hesitation.
 		</div>
 		<br>
 	</div>
