--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Project Manager working at Skytree Digital Limited. I would love to work in an innovative and challenging environment. During my study, I have been very hardworking to get an outstanding performance. I am an eager learner and willing to face any problems and difficulties without hesitation.
+			I am a Technical Team Lead working at AMVR. I would love to work in an innovative and challenging environment. During my study, I have been very hardworking to get an outstanding performance. I am an eager learner and willing to face any problems and difficulties without hesitation.
 		</div>
 		<br>
 	</div>
